added step on how to run the project via command line